--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 
 D:/sbzrgn/My-STM32F411ve_Discovery/STM32F411Discovery_LowPower_Sleep_StandbyModes/.metadata/
+/d/sbzrgn/My-STM32F411ve_Discovery/STM32F411Discovery_LowPower_Sleep_StandbyModes/.metadata
 
 .metadata/
 .settings/
